# chaka

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  PROTOCOL.md  README.md  alembic.ini  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
chaka/: __main__.py  application.py  auth.py  backend.py  cli.py  database.py  factory.py  frames.py  inbound.py  interfaces.py  manager.py  models.py  repositories.py  schemas.py  types.py
chaka/alembic/: env.py
chaka/alembic/versions/: 0001_initial.py  0002_seed_default_channel.py
chaka/routers/: ack.py  admin.py  channels.py  clients.py  logs.py  notify.py  send.py  tokens.py  voice.py
chaka/static/: app.js  style.css
chaka/templates/: base.html  index.html
chaka/templates/partials/: channels.html  clients.html  logs.html  server_log.html  tokens.html  voice_log.html
deploy/: chaka.service  nginx.conf
tests/: conftest.py  test_backend.py  test_cli.py  test_factory.py  test_frames.py  test_handler.py  test_manager.py  test_repositories.py  test_routers.py  test_settings.py
